unpackaged/main/default/objects/ValuePlus__c/ValuePlus__c.object-meta.xml
<CustomObject>
    <label>Value+</label>
    <nameField>
        <displayFormat>VAS{000000}</displayFormat>
        <label>Value+</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ValuePlus</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>