unpackaged/main/default/objects/ValuePlus__c/fields/Account_DBA_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_DBA_Name__c</fullName>
    <formula>Account__r.Account_DBA_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account DBA Name</label>
    <type>Text</type>
</CustomField>