unpackaged/main/default/objects/ValuePlus__c/fields/ACH_Type__c.field-meta.xml
<CustomField>
    <fullName>ACH_Type__c</fullName>
    <description>This is the ACH type used by ProfitStars.  1 = ACH Credit, 2 = ACH Debit, 3 = ACH Refund.  The only supported value at this time is ACH Credit.</description>
    <inlineHelpText>This is the ACH type used by ProfitStars.  1 = ACH Credit, 2 = ACH Debit, 3 = ACH Refund.  The only supported value at this time is ACH Credit.</inlineHelpText>
    <label>ACH Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <default>true</default>
                <label>2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>