unpackaged/main/default/objects/ValuePlus__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <description>R151316</description>
    <label>Active</label>
    <type>Date</type>
</CustomField>