unpackaged/main/default/objects/ValuePlus__c/fields/Amex_CC__c.field-meta.xml
<CustomField>
    <fullName>Amex_CC__c</fullName>
    <label>Amex CC %</label>
    <length>25</length>
    <type>Text</type>
</CustomField>