unpackaged/main/default/objects/ValuePlus__c/fields/Amex_CC_old__c.field-meta.xml
<CustomField>
    <fullName>Amex_CC_old__c</fullName>
    <formula>TEXT( Opportunity__r.AmEx__c )</formula>
    <label>Amex CC %</label>
    <type>Text</type>
</CustomField>