unpackaged/main/default/objects/ValuePlus__c/fields/AMEX_OptBlue__c.field-meta.xml
<CustomField>
    <fullName>AMEX_OptBlue__c</fullName>
    <defaultValue>true</defaultValue>
    <description>R1920935</description>
    <label>AMEX OptBlue</label>
    <type>Checkbox</type>
</CustomField>