unpackaged/main/default/objects/ValuePlus__c/fields/Annual_CreditCard_Volume__c.field-meta.xml
<CustomField>
    <fullName>Annual_CreditCard_Volume__c</fullName>
    <defaultValue>IF($RecordType.Name = &#39;MyCase Payments&#39;, 50000, NULL)</defaultValue>
    <label>Annual CreditCard Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>