unpackaged/main/default/objects/ValuePlus__c/fields/Annual_Review_Notes__c.field-meta.xml
<CustomField>
    <fullName>Annual_Review_Notes__c</fullName>
    <description>R166416</description>
    <label>Annual Review Notes</label>
    <type>TextArea</type>
</CustomField>