unpackaged/main/default/objects/ValuePlus__c/fields/Bank_Account_Count__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Count__c</fullName>
    <label>Bank Account Count</label>
    <summaryForeignKey>Bank_Account__c.ValuePlus__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>