unpackaged/main/default/objects/ValuePlus__c/fields/Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address__c</fullName>
    <formula>Account__r.BillingStreet &amp; BR() &amp; 
Account__r.BillingCity &amp; &quot;, &quot; &amp; Account__r.BillingState &amp; &quot; &quot; &amp; Account__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Address</label>
    <type>Text</type>
</CustomField>