unpackaged/main/default/objects/ValuePlus__c/fields/Build_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Build_In_Progress__c</fullName>
    <description>R2024774; R2025774</description>
    <label>Build In Progress</label>
    <type>Date</type>
</CustomField>