unpackaged/main/default/objects/ValuePlus__c/fields/Business_Premier_Profile_Check__c.field-meta.xml
<CustomField>
    <fullName>Business_Premier_Profile_Check__c</fullName>
    <label>Business Premier Profile Check</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined - OFAC</fullName>
            </value>
            <value>
                <fullName>Declined - Score</fullName>
            </value>
            <value>
                <fullName>Declined - Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Declined - TaxLien</fullName>
            </value>
            <value>
                <fullName>Declined - Documentation</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Exception</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>