unpackaged/main/default/objects/ValuePlus__c/fields/Business_Validated__c.field-meta.xml
<CustomField>
    <fullName>Business_Validated__c</fullName>
    <label>Business Validated</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved - SOS</fullName>
            </value>
            <value>
                <fullName>Approved - Other</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>