unpackaged/main/default/objects/ValuePlus__c/fields/CC_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>CC_Rate_Type__c</fullName>
    <label>CC Rate Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>