unpackaged/main/default/objects/ValuePlus__c/fields/CC_Rate_Type_old__c.field-meta.xml
<CustomField>
    <fullName>CC_Rate_Type_old__c</fullName>
    <formula>TEXT(Opportunity__r.CC_Rate_Type__c)</formula>
    <label>CC Rate Type</label>
    <type>Text</type>
</CustomField>