unpackaged/main/default/objects/ValuePlus__c/fields/CE_Status__c.field-meta.xml
<CustomField>
    <fullName>CE_Status__c</fullName>
    <description>R151420</description>
    <label>CE Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Eligible</fullName>
            </value>
            <value>
                <fullName>Eligible</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Converted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>