unpackaged/main/default/objects/ValuePlus__c/fields/ClassificationCode__c.field-meta.xml
<CustomField>
    <fullName>ClassificationCode__c</fullName>
    <label>Classification Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>531311</fullName>
            </value>
            <value>
                <fullName>531312</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>