unpackaged/main/default/objects/ValuePlus__c/fields/Coaching_Date__c.field-meta.xml
<CustomField>
    <fullName>Coaching_Date__c</fullName>
    <description>R1812191</description>
    <label>Coaching Date</label>
    <type>Date</type>
</CustomField>