unpackaged/main/default/objects/ValuePlus__c/fields/Coaching_Status__c.field-meta.xml
<CustomField>
    <fullName>Coaching_Status__c</fullName>
    <description>R1812191</description>
    <label>Coaching Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>