unpackaged/main/default/objects/ValuePlus__c/fields/Company_Website__c.field-meta.xml
<CustomField>
    <fullName>Company_Website__c</fullName>
    <formula>Account__r.Website</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Website URL</label>
    <type>Text</type>
</CustomField>