unpackaged/main/default/objects/ValuePlus__c/fields/Content_Acquisition__c.field-meta.xml
<CustomField>
    <fullName>Content_Acquisition__c</fullName>
    <label>Content Acquisition</label>
    <type>Date</type>
</CustomField>