unpackaged/main/default/objects/ValuePlus__c/fields/Creative_Brief__c.field-meta.xml
<CustomField>
    <fullName>Creative_Brief__c</fullName>
    <description>Link to MyCase description document

Website Content - R166090; R2024774; R2025774</description>
    <label>Website Content</label>
    <type>Url</type>
</CustomField>