unpackaged/main/default/objects/ValuePlus__c/fields/CreditCard_Single_Trans_Amount__c.field-meta.xml
<CustomField>
    <fullName>CreditCard_Single_Trans_Amount__c</fullName>
    <defaultValue>IF($RecordType.Name = &#39;MyCase Payments&#39;, 50000, NULL)</defaultValue>
    <label>CreditCard Single Trans Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>