unpackaged/main/default/objects/ValuePlus__c/fields/Data_Migration_Stage__c.field-meta.xml
<CustomField>
    <fullName>Data_Migration_Stage__c</fullName>
    <formula>TEXT(Account__r.Data_Migration_Stage__c )</formula>
    <label>Data Migration Stage</label>
    <type>Text</type>
</CustomField>