unpackaged/main/default/objects/ValuePlus__c/fields/DefaultValueField__c.field-meta.xml
<CustomField>
    <fullName>DefaultValueField__c</fullName>
    <label>DefaultValueField</label>
    <length>50</length>
    <type>Text</type>
</CustomField>