unpackaged/main/default/objects/ValuePlus__c/fields/Duda_Site_ID__c.field-meta.xml
<CustomField>
    <fullName>Duda_Site_ID__c</fullName>
    <label>Duda Site ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>