unpackaged/main/default/objects/ValuePlus__c/fields/Enrolled_in_ProfitStars__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_in_ProfitStars__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this record enrolled in ProfitStars?</description>
    <label>Enrolled in ProfitStars</label>
    <type>Checkbox</type>
</CustomField>