unpackaged/main/default/objects/ValuePlus__c/fields/Firm_ID__c.field-meta.xml
<CustomField>
    <fullName>Firm_ID__c</fullName>
    <description>The non-formula version of firm id.</description>
    <label>Firm ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>