unpackaged/main/default/objects/ValuePlus__c/fields/Firm_ID_old__c.field-meta.xml
<CustomField>
    <fullName>Firm_ID_old__c</fullName>
    <description>Created by request R151733, updated per R176870</description>
    <formula>Account__r.MyCase_Firm_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Firm ID</label>
    <type>Text</type>
</CustomField>