unpackaged/main/default/objects/ValuePlus__c/fields/Firm_Status__c.field-meta.xml
<CustomField>
    <fullName>Firm_Status__c</fullName>
    <description>Created by request R151733, updated per R176870</description>
    <formula>Account__r.MyCase_Status_NEW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Firm Status</label>
    <type>Text</type>
</CustomField>