unpackaged/main/default/objects/ValuePlus__c/fields/Fraud_Review_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Review_Approval_Date__c</fullName>
    <label>Fraud Review Approval Date</label>
    <type>DateTime</type>
</CustomField>