unpackaged/main/default/objects/ValuePlus__c/fields/Fraud_Review_Approved__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Review_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fraud Review Approved</label>
    <type>Checkbox</type>
</CustomField>