unpackaged/main/default/objects/ValuePlus__c/fields/Fraud_Review_Approver__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Review_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fraud Review Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Fraud_Review_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>