unpackaged/main/default/objects/ValuePlus__c/fields/GIACT_Underwriting_Fields_Complete__c.field-meta.xml
<CustomField>
    <fullName>GIACT_Underwriting_Fields_Complete__c</fullName>
    <description>R1811209</description>
    <formula>AND( 
OR( 
ISPICKVAL(GIACTBusinessOwner_1_Validation__c,&#39;Automated Approval&#39;), 
ISPICKVAL(GIACTBusinessOwner_1_Validation__c,&#39;Manual Approval&#39;),
ISPICKVAL(GIACTBusinessOwner_1_Validation__c,&#39;Exception&#39;) 
), 
OR( 
ISPICKVAL(GIACTBusinessOwner_2_Validation__c,&#39;Automated Approval&#39;), 
ISPICKVAL(GIACTBusinessOwner_2_Validation__c,&#39;Manual Approval&#39;), 
ISPICKVAL(GIACTBusinessOwner_2_Validation__c,&#39;Exception&#39;),
ISPICKVAL(GIACTBusinessOwner_2_Validation__c,&#39;&#39;)
), 
OR(
ISPICKVAL(GIACTBusinessOwner_3_Validation__c,&#39;Automated Approval&#39;), 
ISPICKVAL(GIACTBusinessOwner_3_Validation__c,&#39;Manual Approval&#39;),
ISPICKVAL(GIACTBusinessOwner_3_Validation__c,&#39;Exception&#39;),
ISPICKVAL(GIACTBusinessOwner_3_Validation__c,&#39;&#39;)
), 
OR( 
ISPICKVAL(GIACTBusinessOwner_4_Validation__c,&#39;Automated Approval&#39;), 
ISPICKVAL(GIACTBusinessOwner_4_Validation__c,&#39;Manual Approval&#39;),
ISPICKVAL(GIACTBusinessOwner_4_Validation__c,&#39;Exception&#39;),
ISPICKVAL(GIACTBusinessOwner_4_Validation__c,&#39;&#39;)
), 
OR( 
ISPICKVAL(TIN_Match__c, &#39;Automated Approval&#39;), 
ISPICKVAL(TIN_Match__c, &#39;Exception&#39;),
ISPICKVAL(TIN_Match__c, &#39;Manual Approval&#39;)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GIACT Underwriting Fields Complete</label>
    <type>Checkbox</type>
</CustomField>