unpackaged/main/default/objects/ValuePlus__c/fields/GIACTBusinessOwner1ValidationChange__c.field-meta.xml
<CustomField>
    <fullName>GIACTBusinessOwner1ValidationChange__c</fullName>
    <defaultValue>false</defaultValue>
    <description>R1811200</description>
    <label>GIACTBusinessOwner1ValidationChange</label>
    <type>Checkbox</type>
</CustomField>