unpackaged/main/default/objects/ValuePlus__c/fields/GIACTBusinessOwner2ValidationChange__c.field-meta.xml
<CustomField>
    <fullName>GIACTBusinessOwner2ValidationChange__c</fullName>
    <defaultValue>false</defaultValue>
    <description>R1811200</description>
    <label>GIACTBusinessOwner2ValidationChange</label>
    <type>Checkbox</type>
</CustomField>