unpackaged/main/default/objects/ValuePlus__c/fields/GIACTBusinessOwner_3_Validation__c.field-meta.xml
<CustomField>
    <fullName>GIACTBusinessOwner_3_Validation__c</fullName>
    <label>Business Owner 3 Validation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready To Transmit To GIACT</fullName>
            </value>
            <value>
                <fullName>Automated Approval</fullName>
            </value>
            <value>
                <fullName>Needs Review</fullName>
            </value>
            <value>
                <fullName>Manual Approval</fullName>
            </value>
            <value>
                <fullName>Exception</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Need Review</fullName>
                <isActive>false</isActive>
                <label>Need Review</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>