unpackaged/main/default/objects/ValuePlus__c/fields/GIACTBusinessValidation__c.field-meta.xml
<CustomField>
    <fullName>GIACTBusinessValidation__c</fullName>
    <label>GIACT Business Validation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready To Transmit To GIACT</fullName>
            </value>
            <value>
                <fullName>Automated Approval</fullName>
            </value>
            <value>
                <fullName>Needs Review</fullName>
            </value>
            <value>
                <fullName>Manual Approval</fullName>
            </value>
            <value>
                <fullName>Exception</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Need Review</fullName>
                <isActive>false</isActive>
                <label>Need Review</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>