unpackaged/main/default/objects/ValuePlus__c/fields/GIACTBusinessValidationChange__c.field-meta.xml
<CustomField>
    <fullName>GIACTBusinessValidationChange__c</fullName>
    <defaultValue>false</defaultValue>
    <description>R1811200</description>
    <label>GIACTBusinessValidationChange</label>
    <type>Checkbox</type>
</CustomField>