unpackaged/main/default/objects/ValuePlus__c/fields/GiactStatus__c.field-meta.xml
<CustomField>
    <fullName>GiactStatus__c</fullName>
    <label>Giact Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automated Approval</fullName>
            </value>
            <value>
                <fullName>Manually Approved</fullName>
            </value>
            <value>
                <fullName>Needs Review</fullName>
            </value>
            <value>
                <fullName>Need Review</fullName>
                <isActive>false</isActive>
                <label>Need Review</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>