unpackaged/main/default/objects/ValuePlus__c/fields/GiactStatusChange__c.field-meta.xml
<CustomField>
    <fullName>GiactStatusChange__c</fullName>
    <defaultValue>false</defaultValue>
    <description>R1811200</description>
    <label>GiactStatusChange</label>
    <type>Checkbox</type>
</CustomField>