unpackaged/main/default/objects/ValuePlus__c/fields/GiactValidationFlag__c.field-meta.xml
<CustomField>
    <fullName>GiactValidationFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>R1811240</description>
    <label>GiactValidationFlag</label>
    <type>Checkbox</type>
</CustomField>