unpackaged/main/default/objects/ValuePlus__c/fields/GIdentifyCallVersion__c.field-meta.xml
<CustomField>
    <fullName>GIdentifyCallVersion__c</fullName>
    <label>GIdentifyCallVersion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>