unpackaged/main/default/objects/ValuePlus__c/fields/Go_Live__c.field-meta.xml
<CustomField>
    <fullName>Go_Live__c</fullName>
    <description>R2024774; R2025774</description>
    <label>Live Date</label>
    <type>Date</type>
</CustomField>