unpackaged/main/default/objects/ValuePlus__c/fields/Google_Analytics_Tracking_ID__c.field-meta.xml
<CustomField>
    <fullName>Google_Analytics_Tracking_ID__c</fullName>
    <label>Google Analytics Tracking ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>