unpackaged/main/default/objects/ValuePlus__c/fields/Has_Accepted_CreditCards__c.field-meta.xml
<CustomField>
    <fullName>Has_Accepted_CreditCards__c</fullName>
    <label>Has Accepted CreditCards</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>