unpackaged/main/default/objects/ValuePlus__c/fields/Ideal_Adoption__c.field-meta.xml
<CustomField>
    <fullName>Ideal_Adoption__c</fullName>
    <label>Ideal Adoption</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>