unpackaged/main/default/objects/ValuePlus__c/fields/Implementation_Fee_Billed__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Fee_Billed__c</fullName>
    <label>Implementation Fee Billed</label>
    <type>Date</type>
</CustomField>