unpackaged/main/default/objects/ValuePlus__c/fields/KOC__c.field-meta.xml
<CustomField>
    <fullName>KOC__c</fullName>
    <description>MyCase Website date of Kick-Off Call</description>
    <label>KOC</label>
    <type>Date</type>
</CustomField>