unpackaged/main/default/objects/ValuePlus__c/fields/KOC_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>KOC_Confirmed__c</fullName>
    <description>R166090, R1810389</description>
    <label>Questionnaire Received</label>
    <type>Date</type>
</CustomField>