unpackaged/main/default/objects/ValuePlus__c/fields/Last_Compliance_Review__c.field-meta.xml
<CustomField>
    <fullName>Last_Compliance_Review__c</fullName>
    <description>R166416</description>
    <label>Last Compliance Review</label>
    <type>Date</type>
</CustomField>