unpackaged/main/default/objects/ValuePlus__c/fields/Lost__c.field-meta.xml
<CustomField>
    <fullName>Lost__c</fullName>
    <description>R2024774; R2025774</description>
    <label>Lost</label>
    <type>Date</type>
</CustomField>