unpackaged/main/default/objects/ValuePlus__c/fields/MC_First_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>MC_First_Payment_Date__c</fullName>
    <description>R176747</description>
    <label>MC First Payment Date</label>
    <type>Date</type>
</CustomField>