unpackaged/main/default/objects/ValuePlus__c/fields/MC_Principal_1_DOB__c.field-meta.xml
<CustomField>
    <fullName>MC_Principal_1_DOB__c</fullName>
    <description>MC,IM; R151946, R2027302; Edited: Sertifi Integ, users</description>
    <label>MC/IM - Principal 1 DOB</label>
    <type>Date</type>
</CustomField>