unpackaged/main/default/objects/ValuePlus__c/fields/MC_Principal_1_Name__c.field-meta.xml
<CustomField>
    <fullName>MC_Principal_1_Name__c</fullName>
    <formula>MC_Principal_1_First_Name__c &amp; &quot; &quot; &amp; MC_Principal_1_Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC Principal 1 Name</label>
    <type>Text</type>
</CustomField>