unpackaged/main/default/objects/ValuePlus__c/fields/MC_Principal_1_Ownership__c.field-meta.xml
<CustomField>
    <fullName>MC_Principal_1_Ownership__c</fullName>
    <description>MC,IM; R151946, R2027302; Edited: Sertifi Integ, users</description>
    <label>MC/IM - Principal 1 Ownership</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>